# tgfp-nfl

./: .gitignore  .pylintrc  README.md  bump_version_and_publish.sh  dev_requirements.txt  pyproject.toml  requirements.txt  setup.py
.run/: Publish to Pypi.run.xml  Set up doppler 'tst' configuration.run.xml  pytest in tests.run.xml
tests/: fixtures.py  test_game.py  test_team.py  test_tgfp_nfl.py
tests/data/: games_data.json  nfl_game_data.json  nfl_game_predictor_data.json  nfl_standings_data.json  nfl_team_data.json  team_data.json
tgfp_nfl/: __init__.py  tgfp_nfl.py
yahoo_nfl/: __init__.py  yahoo.py
