[tool.poetry]
name = "tgfp-nfl"
version = "3.3.0"
description = "Python extraction of NFL scores schedule data from abstracted data source"
authors = ["John Sturgeon <john.sturgeon@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
onetoonemap = "^1.0.0"
python-dateutil = "^2.8.2"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.0"
pytest = "^7.1.2"
doppler-env = "^0.3.0"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
