[tool.poetry]
name = "tgfp-nfl"
version = "6.0.0"
description = "Python extraction of NFL scores schedule data from abstracted data source"
authors = ["John Sturgeon <john.sturgeon@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"
onetoonemap = "^1.0.0"
python-dateutil = "^2.8.2"
httpx = "^0.25.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
